--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "αивσвα ᴍᴜsɪᴄ",
-  "description": "ᴀ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ʙᴏᴛ ᴡɪᴛʜ ᴘʀᴏᴘᴇʀ ғᴜɴᴄᴛɪᴏɴs ᴡʀɪᴛᴛᴇɴ ɪɴ ᴘʏᴛʜᴏɴ ᴡɪᴛʜ ᴘʏʀᴏɢʀᴀᴍ ᴀɴᴅ ᴘʏ-ᴛɢᴄᴀʟʟs.",
+  "name": "anboba music",
+  "description": "انبوبه بيه هيخلي طيزك تلعب باليه.",
   "logo": "https://telegra.ph/file/0eaec9cbb97f3fbf5e2d1.jpg",
   "keywords": [
   "python3",
